--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "@midwayjs/bootstrap": "^3.12.0",
     "@midwayjs/core": "^3.12.0",
+    "@midwayjs/decorator": "^3.16.0",
+    "@midwayjs/i18n": "^3.16.1",
     "@midwayjs/info": "^3.12.0",
     "@midwayjs/koa": "^3.12.0",
     "@midwayjs/logger": "^3.1.0",
     "@midwayjs/redis": "^3.16.0",
     "@midwayjs/swagger": "^3.16.1",
     "@midwayjs/typeorm": "^3.16.0",
-    "@midwayjs/validate": "^3.12.0",
+    "@midwayjs/validate": "^3.16.1",
     "mysql2": "^3.9.9",
     "typeorm": "^0.3.20"
   },
